--- a/git.html
+++ b/git.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>lkhnxhjuasbhcjBAS</p>
+    <section>
+        <div class="container">
+            <div class="hero-header">
+                <h1>My Site</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
